# project-os

./: CMakeLists.txt  build.sh
kernel/: CMakeLists.txt  kernel.c
kernel/arch/x86_64/: boot.asm  idt.c  interupts.asm  kernel_sleep.c  keyboard.c  pic_def.h  ssp.c  tty.c
kernel/include/: interrupts.h  kernel_sleep.h  ssp.h  tty.h
libc/include/: stdio.h
libc/stdlib/: abort.c
x86/: build.sh
x86_64/: CMakeLists.txt  boot.s  build.sh  grub.cfg  kernel.c  linker.ld  x86_64-toolchain.cmake
x86_64/kernel/: CMakeLists.txt  kernel.c
x86_64/kernel/arch/x86_64/: boot.asm  hw_rand.asm  idt_load.asm  interupts.asm  io.asm  page_checker.asm  ssp.c  tty.c  vga.h
x86_64/kernel/include/: cpu_arch.h  ssp.h
x86_64/libc/: CMakeLists.txt
x86_64/libc/stdio/: putchar.c
x86_64/libc/stdlib/: abort.c
x86_64/tools/: gen_script.py
